@startuml

title __USERDAO's Class Diagram__\n

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.UserDao {
          class HbUserDao {
              {static} - factory : SessionFactory
              + HbUserDao()
              + findAll()
              + findById()
              + save()
              + delete()
              + update()
              + addAppToUser()
              + computeApps()
              + deleteAppFromUser()
          }
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.UserDao {
          class UserDao {
              - createInsertQuery()
              - createSelectQuery()
              - createSelectUsersByAppId()
              + insertAppsUsers()
              + findById()
              + save()
              + findAll()
              + insert()
              + delete()
              + createObjects()
              + addAppToUser()
              + computeApps()
              + deleteAppFromUser()
              - getAllAppsQuery()
              + delete()
              + update()
          }
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.db {
        package com.example.applicationsmanagement.db.UserDao {
          interface UserDaoInterface {
              {abstract} + addAppToUser()
              {abstract} + computeApps()
              {abstract} + deleteAppFromUser()
          }
        }
      }
    }
  }
  

  HbUserDao -up-|> UserDaoInterface
  UserDao -up-|> UserDaoInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
